helloworld-my-ns/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: my-helloworld-ns
  name: helloworld-app-svc
  labels:
    app: helloworld-app
spec:
  type: NodePort
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
  selector:
    app: helloworld-app
